--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" href="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\fox-logo.png">
+  <link rel="icon" href="images/fox-logo.png">
 
 
   <!-- Bootstrap CSS -->
@@ -55,7 +55,7 @@
         </div>
         <div class="col-md-6">
           <div class="welcome-page-main-div">
-            <img class="main-photo" src="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\main-photo.jpg" alt="main-photo">
+            <img class="main-photo" src="images/main-photo.jpg" alt="main-photo">
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="card bg-transparent border-style-custom">
             <div class="card-body">
-              <img class="about-me-images" src="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\game-controller.png" alt="game-controller-photo">
+              <img class="about-me-images" src="images/game-controller.png" alt="game-controller-photo">
               <h3 class="about-me-page-text">gamer</h3>
             </div>
           </div>
@@ -83,7 +83,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="card bg-transparent border-style-custom">
             <div class="card-body">
-              <img class="about-me-images" src="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\computer.png" alt="computer-photo">
+              <img class="about-me-images" src="images/computer.png" alt="computer-photo">
               <h3 class="about-me-page-text">web developer</h3>
             </div>
           </div>
@@ -91,7 +91,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="card bg-transparent border-style-custom">
             <div class="card-body">
-              <img class="about-me-images" src="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\headphones.png" alt="headphones.photo">
+              <img class="about-me-images" src="images/headphones.png" alt="headphones.photo">
               <h3 class="about-me-page-text">audiophile</h3>
             </div>
           </div>
@@ -99,7 +99,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="card bg-transparent border-style-custom">
             <div class="card-body">
-              <img class="about-me-images" src="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\fly.png" alt="fly-photo">
+              <img class="about-me-images" src="images/fly.png" alt="fly-photo">
               <h3 class="about-me-page-text">tech enthusiast</h3>
             </div>
           </div>
@@ -122,21 +122,21 @@
       <div class="col-lg-4 col-md-6">
         <div class="card bg-transparent border-style-custom">
           <div class="card-body">
-            <img class="photo-feed" src="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\mono.jpg" alt="mono-photo">
+            <img class="photo-feed" src="images/mono.jpg" alt="mono-photo">
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card bg-transparent border-style-custom">
           <div class="card-body">
-            <img class="photo-feed" src="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\cat-photo.jpg" alt="cat-photo">
+            <img class="photo-feed" src="images/cat-photo.jpg" alt="cat-photo">
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card bg-transparent border-style-custom">
           <div class="card-body">
-            <img class="photo-feed" src="C:\Users\Foxy\Documents\Web Development\foxyswebsite2020\images\mouse-photo.jpg" alt="mouse-photo">
+            <img class="photo-feed" src="images/mouse-photo.jpg" alt="mouse-photo">
           </div>
         </div>
       </div>
